--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   fl_chart: ^0.66.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-
+geolocator: ^10.0.0
+permission_handler: ^11.0.0
 
 
 
